--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: 🔁 Auto Update Sony Events
 
 on:
   schedule:
-    - cron: "*/2 * * * *"  # Run every 2 minutes
+    - cron: "*/10 * * * *"  
   workflow_dispatch:
 
 jobs:
@@ -10,18 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write  # ✅ Needed to allow push
+      contents: write  
 
     steps:
-      - name: 🧩 Checkout repository
+      - name:  Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🧰 Setup Python
+      - name:  Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: 📦 Install dependencies
+      - name:  Install dependencies
         run: |
           python3 -m pip install --upgrade pip
           pip install requests
@@ -34,13 +34,13 @@ jobs:
           import requests, re, json, os
 
           url = os.getenv("PLAYLIST_URL")
-          print(f"📡 Fetching Sony Playlist from: {url}")
+          print(f" Fetching Sony Playlist from: {url}")
 
           try:
               r = requests.get(url)
               r.raise_for_status()
           except Exception as e:
-              print(f"❌ Failed to fetch playlist: {e}")
+              print(f" Failed to fetch playlist: {e}")
               exit(1)
 
           content = r.text.strip().splitlines()
@@ -70,7 +70,7 @@ jobs:
                   channels.append(current)
                   current = {}
 
-          # ---- Generate playlist.m3u ----
+          
           m3u_lines = ["#EXTM3U", f"#UPDATED: {r.headers.get('Date', 'Unknown')}"]
           for c in channels:
               m3u_lines.append(f'#EXTINF:-1 tvg-id="{c["id"]}" tvg-name="{c["name"]}" tvg-logo="{c["logo"]}" tvg-language="{c["language"]}" group-title="{c["category"]}",{c["title"]}')
@@ -78,7 +78,7 @@ jobs:
           with open("playlist.m3u", "w", encoding="utf-8") as f:
               f.write("\n".join(m3u_lines))
 
-          # ---- Generate sony_event.json ----
+      
           json_data = {
               "api_made_by": "bd coder boy",
               "updated": r.headers.get("Date", "Unknown"),
@@ -88,12 +88,12 @@ jobs:
           with open("sony_event.json", "w", encoding="utf-8") as f:
               json.dump(json_data, f, indent=2)
 
-          print(f"✅ Updated playlist.m3u and sony_event.json ({len(channels)} events)")
+          print(f" Updated playlist.m3u and sony_event.json ({len(channels)} events)")
           PYCODE
 
           python3 sony_update.py
 
-      - name: 💾 Commit and Push Changes
+      - name:  Commit and Push Changes
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions Bot"
